--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "scripts": {
         "build": "gulp",
         "serve": "gulp serve",
-        "prestart": "build",
+        "prestart": "npm run build",
         "start": "gulp start",
         "prejshint": "gulp",
         "jshint": "jshint .",
