--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
         {
             "name": "Mohsen Azimi",
             "email": "me@azimi.me"
-    },
+        },
         {
             "name": "Fares Droubi",
             "email": "fares.droubi@gmail.com"
-    }
-  ],
+        }
+    ],
     "description": "Swagger UI is a dependency-free collection of HTML, JavaScript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API",
     "version": "2.1.1-M2",
     "homepage": "http://swagger.io",
@@ -19,7 +19,7 @@
         "build": "gulp",
         "serve": "gulp serve",
         "prestart": "npm run build",
-        "start": "gulp start",
+        "start": "http-server ./dist -p $PORT",
         "prejshint": "gulp",
         "jshint": "jshint .",
         "pretest": "npm run jshint",
