--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "swagger-ui",
-    "author": "Tony Tam <fehguy@gmail.com>",
+    "author": "smsfoo docs <bernardojengwa@gmail.com>",
     "contributors": [
         {
             "name": "Mohsen Azimi",
@@ -12,14 +12,14 @@
         }
     ],
     "description": "Swagger UI is a dependency-free collection of HTML, JavaScript, and CSS assets that dynamically generate beautiful documentation from a Swagger-compliant API",
-    "version": "2.1.1-M2",
+    "version": "1.0.0",
     "homepage": "http://swagger.io",
-    "license": "Apache 2.0",
+    "license": "MIT",
     "scripts": {
         "build": "gulp",
         "serve": "gulp serve",
         "prestart": "npm run build",
-        "start": "http-server ./dist -p $PORT",
+        "start": "http-server ./dist -p $PORT --cors",
         "prejshint": "gulp",
         "jshint": "jshint .",
         "pretest": "npm run jshint",
@@ -35,17 +35,17 @@
         "cors": "^2.5.3",
         "docco": "^0.7.0",
         "event-stream": "^3.2.2",
-        "express": "^4.12.0",
+        "express": "^4.16.3",
         "gulp": "^3.8.11",
         "gulp-clean": "^0.3.1",
         "gulp-concat": "^2.5.2",
         "gulp-connect": "^2.2.0",
         "gulp-declare": "^0.3.0",
         "gulp-handlebars": "^3.0.1",
-        "gulp-header": "^1.2.2",
-        "gulp-less": "^3.0.1",
+        "gulp-header": "^1.8.12",
+        "gulp-less": "^3.5.0",
         "gulp-order": "^1.1.1",
-        "gulp-rename": "^1.2.0",
+        "gulp-rename": "^1.4.0",
         "gulp-uglify": "^1.1.0",
         "gulp-watch": "^4.1.1",
         "gulp-wrap": "^0.11.0",
